// =============================================
// E-COMMERCE PLATFORM - DBML for dbdiagram.io
// =============================================

Project ecommerce_platform {
  database_type: 'PostgreSQL'
  Note: 'E-Commerce Platform Database Schema'
}

// =============================================
// CORE TABLES
// =============================================

Table users {
  id bigserial [pk]
  email varchar(255) [unique, not null]
  password varchar(255) [not null]
  full_name varchar(255) [not null]
  phone varchar(20)
  address text
  avatar varchar(500)
  role varchar(20) [not null, note: 'CUSTOMER, SELLER, ADMIN']
  status varchar(20) [default: 'ACTIVE', note: 'ACTIVE, INACTIVE, BANNED']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    email
    role
    status
  }
}

Table refresh_tokens {
  id bigserial [pk]
  token varchar(255) [unique, not null]
  user_id bigint [not null, ref: > users.id]
  expiry_date timestamp [not null]
  revoked boolean [default: false]
  created_at timestamp [default: `now()`]

  indexes {
    token
    user_id
  }
}

Table shops {
  id bigserial [pk]
  name varchar(255) [not null]
  description text
  logo varchar(500)
  address text
  phone varchar(20)
  status varchar(20) [default: 'PENDING', note: 'ACTIVE, INACTIVE, PENDING']
  seller_id bigint [unique, not null, ref: - users.id]
  rating_average decimal(3,2) [default: 0]
  total_reviews int [default: 0]
  total_products int [default: 0]
  total_orders int [default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    seller_id
    status
  }
}

Table categories {
  id bigserial [pk]
  name varchar(255) [not null]
  description text
  image varchar(500)
  parent_id bigint [ref: > categories.id]
  is_active boolean [default: true]
  sort_order int [default: 0]
  created_at timestamp [default: `now()`]

  indexes {
    parent_id
    is_active
  }
}

Table products {
  id bigserial [pk]
  name varchar(255) [not null]
  description text
  price decimal(12,2) [not null]
  discount_price decimal(12,2)
  stock_quantity int [not null, default: 0]
  thumbnail varchar(500)
  category_id bigint [not null, ref: > categories.id]
  shop_id bigint [not null, ref: > shops.id]
  status varchar(20) [default: 'PENDING', note: 'ACTIVE, INACTIVE, PENDING, REJECTED']
  average_rating decimal(3,2) [default: 0]
  total_reviews int [default: 0]
  sold_count int [default: 0]
  view_count int [default: 0]
  sku varchar(100)
  weight decimal(10,2)
  brand varchar(100)
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    category_id
    shop_id
    status
    price
    (sold_count) [name: 'idx_products_sold_count']
    (created_at) [name: 'idx_products_created_at']
  }
}

Table product_images {
  id bigserial [pk]
  product_id bigint [not null, ref: > products.id]
  image_url varchar(500) [not null]
  sort_order int [default: 0]

  indexes {
    product_id
  }
}

Table product_variants {
  id bigserial [pk]
  product_id bigint [not null, ref: > products.id]
  sku varchar(100)
  name varchar(255) [not null]
  price decimal(12,2) [not null]
  stock_quantity int [not null, default: 0]
  image varchar(500)
  attributes jsonb
  created_at timestamp [default: `now()`]

  indexes {
    product_id
  }
}

// =============================================
// CART TABLES
// =============================================

Table carts {
  id bigserial [pk]
  customer_id bigint [unique, not null, ref: - users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    customer_id
  }
}

Table cart_items {
  id bigserial [pk]
  cart_id bigint [not null, ref: > carts.id]
  product_id bigint [not null, ref: > products.id]
  quantity int [not null, default: 1]
  unit_price decimal(12,2) [not null]
  created_at timestamp [default: `now()`]

  indexes {
    cart_id
    product_id
    (cart_id, product_id) [unique]
  }
}

// =============================================
// ORDER TABLES
// =============================================

Table orders {
  id bigserial [pk]
  order_code varchar(50) [unique, not null]
  customer_id bigint [not null, ref: > users.id]
  shop_id bigint [not null, ref: > shops.id]
  subtotal decimal(12,2) [not null]
  shipping_fee decimal(12,2) [default: 0]
  discount_amount decimal(12,2) [default: 0]
  total_amount decimal(12,2) [not null]
  shipping_name varchar(255) [not null]
  shipping_phone varchar(20) [not null]
  shipping_address text [not null]
  note text
  status varchar(20) [default: 'PLACED', note: 'PLACED, CONFIRMED, SHIPPED, DELIVERED, CANCELLED, RETURNED']
  cancel_reason text
  created_at timestamp [default: `now()`]
  confirmed_at timestamp
  shipped_at timestamp
  delivered_at timestamp
  cancelled_at timestamp

  indexes {
    order_code
    customer_id
    shop_id
    status
    (created_at) [name: 'idx_orders_created_at']
  }
}

Table order_items {
  id bigserial [pk]
  order_id bigint [not null, ref: > orders.id]
  product_id bigint [not null, ref: > products.id]
  product_name varchar(255) [not null]
  product_thumbnail varchar(500)
  quantity int [not null]
  unit_price decimal(12,2) [not null]
  total_price decimal(12,2) [not null]

  indexes {
    order_id
    product_id
  }
}

Table payments {
  id bigserial [pk]
  transaction_id varchar(100) [unique]
  order_id bigint [unique, not null, ref: - orders.id]
  amount decimal(12,2) [not null]
  method varchar(20) [not null, note: 'COD, VNPAY, MOMO, BANK_TRANSFER']
  status varchar(20) [default: 'PENDING', note: 'PENDING, COMPLETED, FAILED, REFUNDED']
  gateway_response text
  created_at timestamp [default: `now()`]
  paid_at timestamp

  indexes {
    order_id
    transaction_id
    status
  }
}

// =============================================
// REVIEW TABLES
// =============================================

Table reviews {
  id bigserial [pk]
  product_id bigint [not null, ref: > products.id]
  customer_id bigint [not null, ref: > users.id]
  order_id bigint [ref: > orders.id]
  rating int [not null, note: '1-5']
  comment text
  status varchar(20) [default: 'ACTIVE', note: 'ACTIVE, HIDDEN, PENDING']
  seller_reply text
  seller_reply_at timestamp
  created_at timestamp [default: `now()`]

  indexes {
    product_id
    customer_id
    rating
    status
    (customer_id, product_id, order_id) [unique]
  }
}

Table review_images {
  id bigserial [pk]
  review_id bigint [not null, ref: > reviews.id]
  image_url varchar(500) [not null]

  indexes {
    review_id
  }
}

// =============================================
// WISHLIST & COUPON TABLES
// =============================================

Table wishlists {
  id bigserial [pk]
  customer_id bigint [not null, ref: > users.id]
  product_id bigint [not null, ref: > products.id]
  created_at timestamp [default: `now()`]

  indexes {
    customer_id
    (customer_id, product_id) [unique]
  }
}

Table coupons {
  id bigserial [pk]
  code varchar(50) [unique, not null]
  description text
  discount_type varchar(20) [not null, note: 'PERCENTAGE, FIXED_AMOUNT']
  discount_value decimal(12,2) [not null]
  min_order_amount decimal(12,2) [default: 0]
  max_discount_amount decimal(12,2)
  usage_limit int
  used_count int [default: 0]
  shop_id bigint [ref: > shops.id]
  start_date timestamp [not null]
  end_date timestamp [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]

  indexes {
    code
    shop_id
  }
}

Table coupon_usages {
  id bigserial [pk]
  coupon_id bigint [not null, ref: > coupons.id]
  customer_id bigint [not null, ref: > users.id]
  order_id bigint [not null, ref: > orders.id]
  discount_amount decimal(12,2) [not null]
  used_at timestamp [default: `now()`]

  indexes {
    (coupon_id, order_id) [unique]
  }
}

// =============================================
// ADDRESS & NOTIFICATION TABLES
// =============================================

Table addresses {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]
  recipient_name varchar(255) [not null]
  phone varchar(20) [not null]
  province varchar(100)
  district varchar(100)
  ward varchar(100)
  street_address text [not null]
  is_default boolean [default: false]
  created_at timestamp [default: `now()`]

  indexes {
    user_id
  }
}

Table notifications {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]
  title varchar(255) [not null]
  content text
  type varchar(50) [not null, note: 'ORDER, PROMOTION, SYSTEM, REVIEW']
  reference_id bigint
  is_read boolean [default: false]
  created_at timestamp [default: `now()`]

  indexes {
    user_id
    is_read
  }
}

Table chat_messages {
  id bigserial [pk]
  sender_id bigint [not null, ref: > users.id]
  receiver_id bigint [not null, ref: > users.id]
  message text [not null]
  is_read boolean [default: false]
  created_at timestamp [default: `now()`]

  indexes {
    sender_id
    receiver_id
  }
}

// =============================================
// TABLE GROUPS (for visualization)
// =============================================

TableGroup user_management {
  users
  refresh_tokens
  addresses
}

TableGroup shop_management {
  shops
  products
  product_images
  product_variants
  categories
}

TableGroup order_management {
  carts
  cart_items
  orders
  order_items
  payments
}

TableGroup engagement {
  reviews
  review_images
  wishlists
  notifications
  chat_messages
}

TableGroup promotions {
  coupons
  coupon_usages
}
